frontend/components/forms/fields/Dropdown/_styles.scss
.dropdown {
  &__label {
    display: block;
    font-size: $small;
    font-weight: $regular;
    color: $core-fleet-black;
    margin-bottom: $pad-xsmall;

    &--error {
      color: $ui-error;
    }
  }

  &__select {
    &--error {
      &.Select {
        .Select-control {
          border-color: $ui-error;
          background-color: $ui-error;
        }

        .Select-arrow {
          border-top-color: $ui-error;
        }
      }
    }
  }

  &__option {
    display: flex;
    flex-direction: column;
  }

  &__help-text {
    margin-top: $pad-xsmall;
    font-size: $xx-small;
    white-space: normal;
    color: $core-fleet-blue;
    font-style: italic;
  }
}

.Select {
  .Select-control {
    border: 1px solid $ui-fleet-blue-15;
    background-color: $ui-light-grey;
    border-radius: $border-radius;
    height: 40px;

    .Select-value {
      border: 0;
    }
  }

  .Select-value {
    font-size: $x-small;
    border-radius: $border-radius;
    background-color: $ui-light-grey;
    border: solid 1px $ui-fleet-blue-15;

    .Select-value-icon {
      border: 0;
      float: right;
      position: relative;
      line-height: 34px;
      width: 25px;
      padding: 0;
      margin: 0 5px;
      text-indent: -999em;

      &::after {
        @extend %kolidecon;
        transition: color 150ms ease-in-out;
        transform: translate(-50%, -50%);
        content: "\f036";
        position: absolute;
        top: 50%;
        left: 50%;
        visibility: visible;
        font-size: $small;
        color: $ui-gray;
        text-indent: 0;
      }
    }

    .Select-value-label {
      font-size: $small;
      font-weight: $regular;
      color: $core-fleet-black;
      line-height: 28px;
    }
  }

  &--single {
    > .Select-control {
      .Select-value {
        line-height: 38px;
      }
    }
  }

  .Select-arrow {
    content: url("../assets/images/icon-chevron-black-16x16@2x.png");
    height: 16px;
    width: 16px;
    margin-top: 6px;
    margin-left: -4px;
    border: none;

    &:hover {
      content: url("../assets/images/icon-chevron-blue-16x16@2x.png");
    }
  }

  &.is-open {
    .Select-arrow {
      content: url("../assets/images/icon-collapse-black-16x16@2x.png");
      height: 16px;
      width: 16px;
      margin-top: 11px;
      margin-left: -3px;
      border: none;

      &:hover {
        content: url("../assets/images/icon-collapse-blue-16x16@2x.png");
      }
    }

    .Select-arrow-zone {
      &:hover {
        .Select-arrow {
          border-top-color: transparent;
        }
      }
    }
  }

  // .Select-arrow {
  //   border-top-color: $core-vibrant-blue;
  // }

  // &.is-focused {
  //   .Select-control {
  //     border: 1px solid $core-vibrant-blue;
  //   }

  //   &:not(.is-open) {
  //     .Select-control {
  //       box-shadow: none;
  //     }
  //   }
  // }

  &.has-value {
    > .Select-control,
    &.is-pseudo-focused > .Select-control {
      .Select-value {
        .Select-value-label {
          color: $core-fleet-black;
          font-size: $small;
        }
      }
    }
  }

  .Select-menu-outer {
    margin-top: $pad-xsmall;
    box-shadow: 0 4px 10px rgba(52, 59, 96, 0.15);
    border-radius: $border-radius;
    z-index: 6;
    overflow: hidden;
    border: 0;
  }

  .Select-noresults {
    font-size: $x-small;
  }

  .Select-option {
    color: $core-fleet-black;
    font-size: $x-small;
    margin: 6px 0;
    padding: 6px $pad-medium;
    display: block;

    &.is-focused {
      background-color: $ui-vibrant-blue-10;

      .Select-icon {
        color: $ui-vibrant-blue-10;
      }
    }

    &.is-disabled {
      color: $ui-gray;

      .Select-icon {
        visibility: hidden;
        opacity: 0;
      }
    }
  }

  .Select-icon {
    color: $ui-gray;
  }

  .Select-placeholder {
    color: $core-fleet-blue;
    font-size: $small;
    line-height: 40px;
    padding: 0 12px;
    box-sizing: border-box;
  }

  &.Select--multi {
    .Select-control {
      display: flex;
      align-items: center;
      height: auto;
      min-height: 40px;
    }

    .Select-multi-value-wrapper {
      flex-grow: 1;
    }

    .Select-arrow-zone {
      display: block;
    }

    .Select-option {
      &.is-disabled {
        color: $core-fleet-black;
        cursor: default;

        &.is-focused {
          background-color: $ui-vibrant-blue-10;
          color: $core-white;
        }
      }
    }

    .Select-value {
      margin-top: 3px;
      margin-bottom: 3px;
    }

    .Select-value-label {
      padding: 0 0 0 1rem;
    }
  }
}

